--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,8 +7,15 @@
         <header>
             <h1><a href="/">Blog KNJ</a></h1>
         </header>
-        
-        {{posts}}
+        {%for post in posts%}
+
+         <article>
+            <time>published: {{ post.created_date }}</time>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+         </article>
+
+        {%endfor%}
 
     </body>
 </html>
