--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,16 +1,22 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blog KNJ</title>
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <header>
-            <h1><a href="/">Blog KNJ</a></h1>
+        <header class="page-header">
+            <div class="container">
+          
+                <h1><a href="/">KNJ Blog</a></h1>
+     
+            </div>
         </header>
         {%for post in posts%}
 
-         <article>
+         <article class="post">
             <time>published: {{ post.created_date }}</time>
             <h2><a href="">{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
