--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -14,15 +14,20 @@
      
             </div>
         </header>
-        {%for post in posts%}
-
-         <article class="post">
-            <time>published: {{ post.created_date }}</time>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-         </article>
-
-        {%endfor%}
-
+        <main class="container">
+            <div class="row">
+                <div class="col">
+                    {% for post in posts %}
+                        <article class="post">
+                            <time class="date">
+                                {{ post.created_date }}
+                            </time>
+                            <h2><a href="">{{ post.title }}</a></h2>
+                            <p>{{ post.text|linebreaksbr }}</p>
+                        </article>
+                    {% endfor %}
+                </div>
+            </div>
+        </main>
     </body>
 </html>
